# dvote-flutter-crypto

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  makefile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/dvote/dvote_crypto/: DvoteCryptoPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: encryption.dart  hashing.dart  main.dart  signature.dart  wallet.dart  zk-snarks.dart
example/test/: widget_test.dart
ios/: dvote_crypto.podspec  dvote_native.podspec
ios/Classes/: DvoteCryptoPlugin.h  DvoteCryptoPlugin.m  DvoteNativePlugin.h  DvoteNativePlugin.m  SwiftDvoteCryptoPlugin.swift  SwiftDvoteNativePlugin.swift
lib/: constants.dart  dvote_crypto.dart  dvote_native.dart  encryption.dart  hashing.dart  snarks.dart  wallet.dart
lib/dart/: encryption.dart  signature.dart  stubs.dart  wallet.dart
lib/main/: encryption.dart  hashing.dart  signature.dart  snarks.dart  wallet.dart
lib/native/: bridge.dart  encryption.dart  hashing.dart  signature.dart  snarks.dart  wallet.dart
lib/native-bridge/: index.dart
rust/: Cargo.toml  cbindgen.toml  makefile
rust/src/: lib.rs
test/: dvote_crypto_test.dart  dvote_native_test.dart
test/unit/: encryption.dart  hashing.dart  signature.dart  wallet.dart
(+2 files in other folders)
