[package]
name = "dvote-rs"
version = "0.1.0"
authors = ["dappfuse <5128827-dappfuse@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
name = "dvote"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ethkey = "0.3.1"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
hex = "0.4.2"
rustc-hex = "2.1.0"
