[package]
name = "dvote-rs"
version = "0.1.0"
authors = ["dappfuse <5128827-dappfuse@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
name = "dvote"
crate-type = ["staticlib", "cdylib"]

[dependencies]
poseidon-rs = { git = "https://github.com/arnaucube/poseidon-rs" }
hex = "0.4.2"
base64 = "0.12.0"
za-prover = { path = "./za/prover" }

#za-compiler = { path = "./za/compiler" }
#libc = "0.2.61"
#stderrlog = "0.4.1"

